Bug 223199 hostList leaks on OOM in nsPermissionManager::GetEnumerator r=dwitte sr=roc